<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/congratsLabel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_bg_demo"
    tools:context=".view.EndscreenActivity">

    <Button
        android:id="@+id/goToHomeBtnMP"
        android:layout_width="222dp"
        android:layout_height="66dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#2C7B83"
        android:fontFamily="@font/aldrich"
        android:text="@string/homeBtnText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AgainBtn" />

    <Button
        android:id="@+id/goToCategoryBtn"
        android:layout_width="222dp"
        android:layout_height="66dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#2C7B83"
        android:fontFamily="@font/aldrich"
        android:text="@string/back_to_categoriesBtn_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToHomeBtnMP"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/AgainBtn"
        android:layout_width="222dp"
        android:layout_height="66dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#2C7B83"
        android:fontFamily="@font/aldrich"
        android:text="@string/againBtn_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundOverLabel" />

    <TextView
        android:id="@+id/roundOverLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/roundOverText"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/congratsMessageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:text="@string/conMessageLabel"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/finalScoreLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/finalScoreCorrect"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratsMessageLabel" />

    <TextView
        android:id="@+id/finalScoreLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/finalScroreIncorrect"
        android:textColor="#9A1E15"
        android:textSize="20sp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>