<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameTimer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_bg_demo"
    tools:context=".view.GamemodeActivity">

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:background="#2C7B83"
        android:backgroundTintMode="add"
        android:text="@string/questionTextLabel"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/answerBtn3"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="140dp"
        android:backgroundTint="#2C7B83"
        android:fontFamily="@font/aldrich"
        android:text="@string/true_btn_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/answerBtn4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerBtn1" />

    <Button
        android:id="@+id/answerBtn2"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="#2C7B83"
        android:fontFamily="@font/aldrich"
        android:text="@string/falseBtnText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/answerBtn4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/answerBtn1"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView" />

    <Button
        android:id="@+id/answerBtn1"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="#2C7B83"
        android:fontFamily="@font/aldrich"
        android:text="@string/true_btn_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/answerBtn3"
        app:layout_constraintEnd_toStartOf="@+id/answerBtn2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView" />

    <Button
        android:id="@+id/answerBtn4"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="140dp"
        android:backgroundTint="#2C7B83"
        android:fontFamily="@font/aldrich"
        android:text="@string/true_btn_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/answerBtn3"
        app:layout_constraintTop_toBottomOf="@+id/answerBtn2" />

    <TextView
        android:id="@+id/categoryGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/aldrich"
        android:text="Placeholder"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/correctOrIncorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/aldrich"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointsLabel" />

    <TextView
        android:id="@+id/pointsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/scoreLabel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView" />

    <TextView
        android:id="@+id/questionCounterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/question_x_out_of_y_label"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/questionTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/correctQuestionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/correctQuestionCounterLabel"
        android:textColor="#21C315"
        app:layout_constraintBottom_toTopOf="@+id/questionTextView"
        app:layout_constraintStart_toEndOf="@+id/questionCounterLabel" />

    <TextView
        android:id="@+id/incorrectQuestionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/incorrectQuestionCounterLabel"
        android:textColor="#C61F1F"
        app:layout_constraintBottom_toTopOf="@+id/questionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toEndOf="@+id/correctQuestionsLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/gameTimerProgressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="349dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>