<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainmenubg"
    tools:context=".view.GameActivity">

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="353dp"
        android:layout_height="125dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:text="Placeholder"
        android:textAlignment="center"
        android:gravity="center"

        android:background="#2C7B83"
        android:backgroundTintMode="add"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/trueBtn"
        android:layout_width="173dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#2C7B83"
        android:text="@string/true_btn_text"
        android:textSize="20sp"
        android:fontFamily="@font/aldrich"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView" />

    <Button
        android:id="@+id/falseBtn"
        android:layout_width="173dp"
        android:layout_height="112dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#2C7B83"
        android:text="@string/falseBtnText"
        android:fontFamily="@font/aldrich"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView" />

    <Button
        android:id="@+id/randomQuestionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="200dp"
        android:text="@string/new_question_btn"
        android:fontFamily="@font/aldrich"
        android:backgroundTint="#2C7B83"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pointsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="0"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView" />

    <TextView
        android:id="@+id/categoryGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/aldrich"
        android:text="Placeholder"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/correctOrIncorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/aldrich"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointsLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>